--- a/WeatherBZ/res/values/arrays.xml
+++ b/WeatherBZ/res/values/arrays.xml
@@ -554,6 +554,7 @@
         <item >Humidity</item>
         <item >Pressure</item>
         <item >Visibility</item>
+        <item >Next Alarm</item>
     </string-array>
     <string-array name="main_show_values" translatable="false">
         <item >main_feel</item>
@@ -561,6 +562,7 @@
         <item >main_humid</item>
         <item >main_press</item>
         <item >main_visib</item>
+        <item >main_next_alarm</item>
     </string-array>    
     <string-array name="main_locale_entries">
         <item >System</item>
