--- a/WeatherBZ/res/values-ro/arrays.xml
+++ b/WeatherBZ/res/values-ro/arrays.xml
@@ -282,4 +282,13 @@
         <item>Vizibilitate</item>
         <item>Următoarea Alarmă</item>
     </string-array>
+    <string-array name="widget41_show_entries">
+        <item >Panou temperatură</item>
+        <item >Panou date extinse</item>
+        <item >Panou timp</item>
+    </string-array>
+    <string-array name="widget41_data_entries">
+        <item >"Vremea pentru 3 zile"</item>
+        <item >"Vremea azi"</item>
+    </string-array>
 </resources>
