--- a/WeatherBZ/res/values-it/arrays.xml
+++ b/WeatherBZ/res/values-it/arrays.xml
@@ -6,6 +6,7 @@
         <item>1 ora</item>
         <item>1 ora 30 min</item>
         <item>2 ore</item>
+        <item>3 ore</item>
         <item>4 ore</item>
         <item>6 ore</item>
     </string-array>
