--- a/WeatherBZ/res/values-uk/arrays.xml
+++ b/WeatherBZ/res/values-uk/arrays.xml
@@ -6,6 +6,7 @@
         <item >1 година</item>
         <item >1 година 30 хвилин</item>
         <item >2 години</item>
+        <item >3 години</item>
         <item >4 години</item>
         <item >6 годин</item>
     </string-array>
