--- a/WeatherBZ/res/values-ro/arrays.xml
+++ b/WeatherBZ/res/values-ro/arrays.xml
@@ -6,6 +6,7 @@
         <item>1 oră</item>
         <item>1 oră 30 minute</item>
         <item>2 ore</item>
+        <item>3 ore</item>
         <item>4 ore</item>
         <item>6 ore</item>
     </string-array>
