--- a/WeatherBZ/res/values-ru/arrays.xml
+++ b/WeatherBZ/res/values-ru/arrays.xml
@@ -6,6 +6,7 @@
         <item >1 час</item>
         <item >1 час 30 минут</item>
         <item >2 часа</item>
+        <item >3 часа</item>
         <item >4 часа</item>
         <item >6 часов</item>
     </string-array>
