--- a/WeatherBZ/res/values/arrays.xml
+++ b/WeatherBZ/res/values/arrays.xml
@@ -6,6 +6,7 @@
         <item >1 hour</item>
         <item >1 hour 30 mins</item>
         <item >2 hours</item>
+        <item >3 hours</item>
         <item >4 hours</item>
         <item >6 hours</item>
     </string-array>
@@ -15,6 +16,7 @@
         <item >60</item>
         <item >90</item>
         <item >120</item>
+        <item >180</item>
         <item >240</item>
         <item >360</item>
     </string-array>
