--- a/WeatherBZ/res/values-hu/arrays.xml
+++ b/WeatherBZ/res/values-hu/arrays.xml
@@ -1,587 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="donations__google_android_market_promt_array">
+        <item>1 Euró</item>
+        <item>2 Euró</item>
+        <item>3 Euró</item>
+        <item>5 Euró</item>
+        <item>8 Euró</item>
+        <item>13 Euró</item>
+    </string-array>
     <string-array name="update_interval_names">
-        <item>10 perc</item>
         <item>30 perc</item>
         <item>1 óra</item>
-        <item>1,5 óra</item>
         <item>2 óra</item>
         <item>3 óra</item>
         <item>4 óra</item>
         <item>6 óra</item>
     </string-array>
-    <string-array name="update_interval_values">
-        <item>10</item>
-        <item>30</item>
-        <item>60</item>
-        <item>90</item>
-        <item>120</item>
-        <item>180</item>
-        <item>240</item>
-        <item>360</item>
-    </string-array>
-    <string-array name="country_codes">
-        <item>ad</item>
-        <item>ae</item>
-        <item>af</item>
-        <item>ag</item>
-        <item>ai</item>
-        <item>al</item>
-        <item>am</item>
-        <item>an</item>
-        <item>ao</item>
-        <item>aq</item>
-        <item>ar</item>
-        <item>as</item>
-        <item>at</item>
-        <item>au</item>
-        <item>aw</item>
-        <item>ax</item>
-        <item>az</item>
-        <item>ba</item>
-        <item>bb</item>
-        <item>bd</item>
-        <item>be</item>
-        <item>bf</item>
-        <item>bg</item>
-        <item>bh</item>
-        <item>bi</item>
-        <item>bj</item>
-        <item>bm</item>
-        <item>bn</item>
-        <item>bo</item>
-        <item>br</item>
-        <item>bs</item>
-        <item>bt</item>
-        <item>bv</item>
-        <item>bw</item>
-        <item>by</item>
-        <item>bz</item>
-        <item>ca</item>
-        <item>cc</item>
-        <item>cd</item>
-        <item>cf</item>
-        <item>cg</item>
-        <item>ch</item>
-        <item>ci</item>
-        <item>ck</item>
-        <item>cl</item>
-        <item>cm</item>
-        <item>cn</item>
-        <item>co</item>
-        <item>cr</item>
-        <item>cs</item>
-        <item>cu</item>
-        <item>cv</item>
-        <item>cx</item>
-        <item>cy</item>
-        <item>cz</item>
-        <item>de</item>
-        <item>dj</item>
-        <item>dk</item>
-        <item>dm</item>
-        <item>do</item>
-        <item>dz</item>
-        <item>ec</item>
-        <item>ee</item>
-        <item>eg</item>
-        <item>eh</item>
-        <item>er</item>
-        <item>es</item>
-        <item>et</item>
-        <item>fi</item>
-        <item>fj</item>
-        <item>fk</item>
-        <item>fm</item>
-        <item>fo</item>
-        <item>fr</item>
-        <item>fx</item>
-        <item>ga</item>
-        <item>gb</item>
-        <item>gd</item>
-        <item>ge</item>
-        <item>gf</item>
-        <item>gh</item>
-        <item>gi</item>
-        <item>gl</item>
-        <item>gm</item>
-        <item>gn</item>
-        <item>gp</item>
-        <item>gq</item>
-        <item>gr</item>
-        <item>gs</item>
-        <item>gt</item>
-        <item>gu</item>
-        <item>gw</item>
-        <item>gy</item>
-        <item>hk</item>
-        <item>hm</item>
-        <item>hn</item>
-        <item>hr</item>
-        <item>ht</item>
-        <item>hu</item>
-        <item>id</item>
-        <item>ie</item>
-        <item>il</item>
-        <item>in</item>
-        <item>io</item>
-        <item>iq</item>
-        <item>ir</item>
-        <item>is</item>
-        <item>it</item>
-        <item>jm</item>
-        <item>jo</item>
-        <item>jp</item>
-        <item>ke</item>
-        <item>kg</item>
-        <item>kh</item>
-        <item>ki</item>
-        <item>km</item>
-        <item>kn</item>
-        <item>kp</item>
-        <item>kr</item>
-        <item>kw</item>
-        <item>ky</item>
-        <item>kz</item>
-        <item>la</item>
-        <item>lb</item>
-        <item>lc</item>
-        <item>li</item>
-        <item>lk</item>
-        <item>lr</item>
-        <item>ls</item>
-        <item>lt</item>
-        <item>lu</item>
-        <item>lv</item>
-        <item>ly</item>
-        <item>ma</item>
-        <item>mc</item>
-        <item>md</item>
-        <item>mg</item>
-        <item>mh</item>
-        <item>mk</item>
-        <item>ml</item>
-        <item>mm</item>
-        <item>mn</item>
-        <item>mo</item>
-        <item>mp</item>
-        <item>mq</item>
-        <item>mr</item>
-        <item>ms</item>
-        <item>mt</item>
-        <item>mu</item>
-        <item>mv</item>
-        <item>mw</item>
-        <item>mx</item>
-        <item>my</item>
-        <item>mz</item>
-        <item>na</item>
-        <item>nc</item>
-        <item>ne</item>
-        <item>nf</item>
-        <item>ng</item>
-        <item>ni</item>
-        <item>nl</item>
-        <item>no</item>
-        <item>np</item>
-        <item>nr</item>
-        <item>nu</item>
-        <item>nz</item>
-        <item>om</item>
-        <item>pa</item>
-        <item>pe</item>
-        <item>pf</item>
-        <item>pg</item>
-        <item>ph</item>
-        <item>pk</item>
-        <item>pl</item>
-        <item>pm</item>
-        <item>pn</item>
-        <item>pr</item>
-        <item>ps</item>
-        <item>pt</item>
-        <item>pw</item>
-        <item>py</item>
-        <item>qa</item>
-        <item>re</item>
-        <item>ro</item>
-        <item>ru</item>
-        <item>rw</item>
-        <item>sa</item>
-        <item>sb</item>
-        <item>sc</item>
-        <item>sd</item>
-        <item>se</item>
-        <item>sg</item>
-        <item>sh</item>
-        <item>si</item>
-        <item>sj</item>
-        <item>sk</item>
-        <item>sl</item>
-        <item>sm</item>
-        <item>sn</item>
-        <item>so</item>
-        <item>sr</item>
-        <item>st</item>
-        <item>su</item>
-        <item>sv</item>
-        <item>sy</item>
-        <item>sz</item>
-        <item>tc</item>
-        <item>td</item>
-        <item>tf</item>
-        <item>tg</item>
-        <item>th</item>
-        <item>tj</item>
-        <item>tk</item>
-        <item>tl</item>
-        <item>tm</item>
-        <item>tn</item>
-        <item>to</item>
-        <item>tp</item>
-        <item>tr</item>
-        <item>tt</item>
-        <item>tv</item>
-        <item>tw</item>
-        <item>tz</item>
-        <item>ua</item>
-        <item>ug</item>
-        <item>uk</item>
-        <item>um</item>
-        <item>us</item>
-        <item>uy</item>
-        <item>uz</item>
-        <item>va</item>
-        <item>vc</item>
-        <item>ve</item>
-        <item>vg</item>
-        <item>vi</item>
-        <item>vn</item>
-        <item>vu</item>
-        <item>wf</item>
-        <item>ws</item>
-        <item>ye</item>
-        <item>yt</item>
-        <item>yu</item>
-        <item>za</item>
-        <item>zm</item>
-        <item>zr</item>
-        <item>zw</item>
-        <item>pm</item>
-    </string-array>
-    <string-array name="country_names">
-        <item>Andorra</item>
-        <item>United Arab Emirates</item>
-        <item>Afghanistan</item>
-        <item>Antigua and Barbuda</item>
-        <item>Anguilla</item>
-        <item>Albania</item>
-        <item>Armenia</item>
-        <item>Netherlands Antilles</item>
-        <item>Angola</item>
-        <item>Antarctica</item>
-        <item>Argentina</item>
-        <item>American Samoa</item>
-        <item>Austria</item>
-        <item>Australia</item>
-        <item>Aruba</item>
-        <item>Aland Islands</item>
-        <item>Azerbaijan</item>
-        <item>Bosnia and Herzegovina</item>
-        <item>Barbados</item>
-        <item>Bangladesh</item>
-        <item>Belgium</item>
-        <item>Burkina Faso</item>
-        <item>Bulgaria</item>
-        <item>Bahrain</item>
-        <item>Burundi</item>
-        <item>Benin</item>
-        <item>Bermuda</item>
-        <item>Brunei Darussalam</item>
-        <item>Bolivia</item>
-        <item>Brazil</item>
-        <item>Bahamas</item>
-        <item>Bhutan</item>
-        <item>Bouvet Island</item>
-        <item>Botswana</item>
-        <item>Belarus</item>
-        <item>Belize</item>
-        <item>Canada</item>
-        <item>Cocos (Keeling) Islands</item>
-        <item>Democratic Republic of the Congo</item>
-        <item>Central African Republic</item>
-        <item>Congo</item>
-        <item>Switzerland</item>
-        <item>"Cote D'Ivoire (Ivory Coast)"</item>
-        <item>Cook Islands</item>
-        <item>Chile</item>
-        <item>Cameroon</item>
-        <item>China</item>
-        <item>Colombia</item>
-        <item>Costa Rica</item>
-        <item>Serbia and Montenegro</item>
-        <item>Cuba</item>
-        <item>Cape Verde</item>
-        <item>Christmas Island</item>
-        <item>Cyprus</item>
-        <item>Czech Republic</item>
-        <item>Germany</item>
-        <item>Djibouti</item>
-        <item>Denmark</item>
-        <item>Dominica</item>
-        <item>Dominican Republic</item>
-        <item>Algeria</item>
-        <item>Ecuador</item>
-        <item>Estonia</item>
-        <item>Egypt</item>
-        <item>Western Sahara</item>
-        <item>Eritrea</item>
-        <item>Spain</item>
-        <item>Ethiopia</item>
-        <item>Finland</item>
-        <item>Fiji</item>
-        <item>Falkland Islands (Malvinas)</item>
-        <item>Federated States of Micronesia</item>
-        <item>Faroe Islands</item>
-        <item>France</item>
-        <item>France, Metropolitan</item>
-        <item>Gabon</item>
-        <item>Great Britain (UK)</item>
-        <item>Grenada</item>
-        <item>Georgia</item>
-        <item>French Guiana</item>
-        <item>Ghana</item>
-        <item>Gibraltar</item>
-        <item>Greenland</item>
-        <item>Gambia</item>
-        <item>Guinea</item>
-        <item>Guadeloupe</item>
-        <item>Equatorial Guinea</item>
-        <item>Greece</item>
-        <item>S. Georgia and S. Sandwich Islands</item>
-        <item>Guatemala</item>
-        <item>Guam</item>
-        <item>Guinea-Bissau</item>
-        <item>Guyana</item>
-        <item>Hong Kong</item>
-        <item>Heard Island and McDonald Islands</item>
-        <item>Honduras</item>
-        <item>Croatia (Hrvatska)</item>
-        <item>Haiti</item>
-        <item>Hungary</item>
-        <item>Indonesia</item>
-        <item>Ireland</item>
-        <item>Israel</item>
-        <item>India</item>
-        <item>British Indian Ocean Territory</item>
-        <item>Iraq</item>
-        <item>Iran</item>
-        <item>Iceland</item>
-        <item>Italy</item>
-        <item>Jamaica</item>
-        <item>Jordan</item>
-        <item>Japan</item>
-        <item>Kenya</item>
-        <item>Kyrgyzstan</item>
-        <item>Cambodia</item>
-        <item>Kiribati</item>
-        <item>Comoros</item>
-        <item>Saint Kitts and Nevis</item>
-        <item>Korea (North)</item>
-        <item>Korea (South)</item>
-        <item>Kuwait</item>
-        <item>Cayman Islands</item>
-        <item>Kazakhstan</item>
-        <item>Laos</item>
-        <item>Lebanon</item>
-        <item>Saint Lucia</item>
-        <item>Liechtenstein</item>
-        <item>Sri Lanka</item>
-        <item>Liberia</item>
-        <item>Lesotho</item>
-        <item>Lithuania</item>
-        <item>Luxembourg</item>
-        <item>Latvia</item>
-        <item>Libya</item>
-        <item>Morocco</item>
-        <item>Monaco</item>
-        <item>Moldova</item>
-        <item>Madagascar</item>
-        <item>Marshall Islands</item>
-        <item>Macedonia</item>
-        <item>Mali</item>
-        <item>Myanmar</item>
-        <item>Mongolia</item>
-        <item>Macao</item>
-        <item>Northern Mariana Islands</item>
-        <item>Martinique</item>
-        <item>Mauritania</item>
-        <item>Montserrat</item>
-        <item>Malta</item>
-        <item>Mauritius</item>
-        <item>Maldives</item>
-        <item>Malawi</item>
-        <item>Mexico</item>
-        <item>Malaysia</item>
-        <item>Mozambique</item>
-        <item>Namibia</item>
-        <item>New Caledonia</item>
-        <item>Niger</item>
-        <item>Norfolk Island</item>
-        <item>Nigeria</item>
-        <item>Nicaragua</item>
-        <item>Netherlands</item>
-        <item>Norway</item>
-        <item>Nepal</item>
-        <item>Nauru</item>
-        <item>Niue</item>
-        <item>New Zealand (Aotearoa)</item>
-        <item>Oman</item>
-        <item>Panama</item>
-        <item>Peru</item>
-        <item>French Polynesia</item>
-        <item>Papua New Guinea</item>
-        <item>Philippines</item>
-        <item>Pakistan</item>
-        <item>Poland</item>
-        <item>Saint Pierre and Miquelon</item>
-        <item>Pitcairn</item>
-        <item>Puerto Rico</item>
-        <item>Palestinian Territory</item>
-        <item>Portugal</item>
-        <item>Palau</item>
-        <item>Paraguay</item>
-        <item>Qatar</item>
-        <item>Reunion</item>
-        <item>Romania</item>
-        <item>Russian Federation</item>
-        <item>Rwanda</item>
-        <item>Saudi Arabia</item>
-        <item>Solomon Islands</item>
-        <item>Seychelles</item>
-        <item>Sudan</item>
-        <item>Sweden</item>
-        <item>Singapore</item>
-        <item>Saint Helena</item>
-        <item>Slovenia</item>
-        <item>Svalbard and Jan Mayen</item>
-        <item>Slovakia</item>
-        <item>Sierra Leone</item>
-        <item>San Marino</item>
-        <item>Senegal</item>
-        <item>Somalia</item>
-        <item>Suriname</item>
-        <item>Sao Tome and Principe</item>
-        <item>USSR (former)</item>
-        <item>El Salvador</item>
-        <item>Syria</item>
-        <item>Swaziland</item>
-        <item>Turks and Caicos Islands</item>
-        <item>Chad</item>
-        <item>French Southern Territories</item>
-        <item>Togo</item>
-        <item>Thailand</item>
-        <item>Tajikistan</item>
-        <item>Tokelau</item>
-        <item>Timor-Leste</item>
-        <item>Turkmenistan</item>
-        <item>Tunisia</item>
-        <item>Tonga</item>
-        <item>East Timor</item>
-        <item>Turkey</item>
-        <item>Trinidad and Tobago</item>
-        <item>Tuvalu</item>
-        <item>Taiwan</item>
-        <item>Tanzania</item>
-        <item>Ukraine</item>
-        <item>Uganda</item>
-        <item>United Kingdom</item>
-        <item>United States Minor Outlying Islands</item>
-        <item>United States</item>
-        <item>Uruguay</item>
-        <item>Uzbekistan</item>
-        <item>Vatican City State (Holy See)</item>
-        <item>Saint Vincent and the Grenadines</item>
-        <item>Venezuela</item>
-        <item>Virgin Islands (British)</item>
-        <item>Virgin Islands (U.S.)</item>
-        <item>Viet Nam</item>
-        <item>Vanuatu</item>
-        <item>Wallis and Futuna</item>
-        <item>Samoa</item>
-        <item>Yemen</item>
-        <item>Mayotte</item>
-        <item>Yugoslavia (former)</item>
-        <item>South Africa</item>
-        <item>Zambia</item>
-        <item>Zaire (former)</item>
-        <item>Zimbabwe</item>
-        <item>Saint Pierre and Miquelon</item>
-    </string-array>
     <string-array name="notif_temp_color_entries">
         <item>Fekete</item>
         <item>Fehér</item>
     </string-array>
-    <string-array name="notif_temp_color_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
+
     <string-array name="notif_type_entries">
-        <item>Hőmérséklet egyég</item>
+        <item>Hőmérséklet egység</item>
         <item>Időjárás ikon</item>
     </string-array>
-    <string-array name="notif_type_values">
-        <item>temperature_symbol</item>
-        <item>weather_symbol</item>
-    </string-array>
+
     <string-array name="widget42_show_entries">
         <item>Óra</item>
         <item>Dátum</item>
         <item>Város</item>
-        <item>Időjárás leírás</item>
+        <item>Időjárás</item>
         <item>Hőérzet</item>
         <item>Szél</item>
     </string-array>
-    <string-array name="widget42_show_values">
-        <item>w42_clock</item>
-        <item>w42_date</item>
-        <item>w42_city</item>
-        <item>w42_desc</item>
-        <item>w42_feel</item>
-        <item>w42_wind</item>
-    </string-array>
+
     <string-array name="main_show_entries">
         <item>Hőérzet</item>
         <item>Szél</item>
         <item>Páratartalom</item>
         <item>Légnyomás</item>
-        <item>Magasság</item>
+        <item>Látótávolság</item>
         <item>Következő riasztás</item>
     </string-array>
-    <string-array name="main_show_values">
-        <item>main_feel</item>
-        <item>main_wind</item>
-        <item>main_humid</item>
-        <item>main_press</item>
-        <item>main_visib</item>
-        <item>main_next_alarm</item>
-    </string-array>
+
     <string-array name="widget41_show_entries">
-        <item>Hőmérséklet  panel</item>
-        <item>Kiterjesztett adat panel</item>
+        <item>Hőmérséklet panel</item>
+        <item>Előrejelzés panel</item>
         <item>Idő panel</item>
     </string-array>
-    <string-array name="widget41_show_values">
-        <item>w41_temp</item>
-        <item>w41_cond</item>
-        <item>w41_time</item>
-    </string-array>
+
     <string-array name="widget41_data_entries">
-        <item>"3-day's forecast data"</item>
-        <item>"Today's Forecast data"</item>
+        <item>"3-napos előrejelzés"</item>
+        <item>"Mai időjárás"</item>
     </string-array>
-    <string-array name="widget41_data_values">
-        <item>w41_3day_forecast</item>
-        <item>w41_forecast_data</item>
-    </string-array>
+
 </resources>
