--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="update_interval_names">
+        <item>30 minuti</item> 
         <item>1 ora</item>
         <item>2 ore</item>
         <item>3 ore</item>
