--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="update_interval_names">
+        <item>30 минут</item>
         <item >1 час</item>
         <item >2 часа</item>
         <item >3 часа</item>
