--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -605,5 +605,13 @@
     <string-array name="visibility_units_values" translatable="false">
         <item>visibility_units_m</item>
         <item>visibility_units_mi</item>
-    </string-array>            
+    </string-array> 
+    <string-array name="temperature_units_entries">
+        <item>@string/temperature_units_c</item>
+        <item>@string/temperature_units_f</item>
+    </string-array>
+    <string-array name="temperature_units_values" translatable="false">
+        <item>temperature_units_c</item>
+        <item>temperature_units_f</item>
+    </string-array>               
 </resources>
