--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -613,5 +613,15 @@
     <string-array name="temperature_units_values" translatable="false">
         <item>temperature_units_c</item>
         <item>temperature_units_f</item>
-    </string-array>               
+    </string-array>      
+    <string-array name="animation_type_entries">
+        <item >Default</item>
+        <item >MITU</item>
+        <item >MIUI video</item>
+    </string-array>
+    <string-array name="animation_type_values" translatable="false">
+        <item >animation_default</item>
+        <item >animation_mitu</item>
+        <item >animation_miui</item>
+    </string-array>              
 </resources>
