--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -507,4 +507,9 @@
         <item >Прогноз на 3 дня</item>
         <item >Текущие данные</item>
     </string-array>	
+    <string-array name="animation_type_entries">
+        <item >По умолчанию</item>
+        <item >Кролик MITU</item>
+        <item >MIUI видео</item>
+    </string-array>    
 </resources>
