--- a/res/values-sk/arrays.xml
+++ b/res/values-sk/arrays.xml
@@ -49,4 +49,9 @@
         <item>"3-dňová predpoveď"</item>
         <item>"Dnešná predpoveď"</item>
     </string-array>
+    <string-array name="animation_type_entries">
+        <item >Predvolená</item>
+        <item >MITU</item>
+        <item >MIUI video</item>
+    </string-array>
 </resources>
