--- a/res/values-ro/arrays.xml
+++ b/res/values-ro/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decoded by jBART (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string-array name="update_interval_names">
         <item>30 minute</item>
         <item>1 oră</item>
@@ -289,5 +289,10 @@
     <string-array name="widget41_data_entries">
         <item >"Vremea pentru 3 zile"</item>
         <item >"Vremea azi"</item>
+    </string-array>
+    <string-array name="animation_type_entries">
+        <item >Implicit</item>
+        <item >MITU</item>
+        <item >MIUI video</item>
     </string-array>
 </resources>
