--- a/res/values-da/arrays.xml
+++ b/res/values-da/arrays.xml
@@ -539,4 +539,9 @@
         <item>"3-dags vejrudsigt"</item>
         <item>"Idags vejrudsigt"</item>
     </string-array>
+    <string-array name="animation_type_entries">
+        <item>Standard</item>
+        <item>MITU</item>
+        <item>MIUI video</item>
+    </string-array>
 </resources>
