--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -51,7 +51,7 @@
     </string-array>
     <string-array name="animation_type_entries">
         <item >Předvolená</item>
-        <item >MITU</item>
+        <!--item >MITU</item-->
         <item >MIUI video</item>
     </string-array>
 </resources>
