--- a/res/values-da/arrays.xml
+++ b/res/values-da/arrays.xml
@@ -541,7 +541,7 @@
     </string-array>
     <string-array name="animation_type_entries">
         <item>Standard</item>
-        <item>MITU</item>
+        <!--item>MITU</item-->
         <item>MIUI video</item>
     </string-array>
 </resources>
