--- a/res/values-ro/arrays.xml
+++ b/res/values-ro/arrays.xml
@@ -292,7 +292,7 @@
     </string-array>
     <string-array name="animation_type_entries">
         <item >Implicit</item>
-        <item >MITU</item>
+        <!--item >MITU</item-->
         <item >MIUI video</item>
     </string-array>
 </resources>
