--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <string-array name="donations__google_android_market_promt_array">
+        <item>1 euro</item>
+        <item>2 euros</item>
+        <item>3 euros</item>
+        <item>5 euros</item>
+        <item>8 euros</item>
+        <item>13 euros</item>
+    </string-array>
     <string-array name="update_interval_names">
         <item>30 minutes</item> 
         <item >1 heure</item>
@@ -512,10 +520,10 @@
     </string-array>
     <string-array name="notif_type_entries">
         <item >Symbole de température</item>
-        <item >Icône météo</item>
+        <item >Icône de la météo actuelle</item>
     </string-array>   
     <string-array name="widget42_show_entries">
-        <item >Horloge</item>
+        <item >Heure</item>
         <item >Date</item>
         <item >Ville</item>
         <item >Météo (description)</item>
