--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -608,10 +608,12 @@
     </string-array>  
     <string-array name="visibility_units_entries">
         <item>@string/visibility_units_m</item>
+        <item>@string/visibility_units_km</item>
         <item>@string/visibility_units_mi</item>
     </string-array>
     <string-array name="visibility_units_values" translatable="false">
         <item>visibility_units_m</item>
+        <item>visibility_units_km</item>
         <item>visibility_units_mi</item>
     </string-array> 
     <string-array name="temperature_units_entries">
