--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -536,6 +536,7 @@
         <item>Humidité</item>
         <item>Pression</item>
         <item>Visibilité</item>
+        <item >Sunrise and sunset</item>
         <item>Prochaine alarme</item>
     </string-array>      
 	<string-array name="widget41_show_entries">
