--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -536,6 +536,7 @@
         <item>Umidità</item>
         <item>Pressione</item>
         <item>Visibilità</item>
+        <item >Sunrise and sunset</item>
         <item>Pross.Allarme</item>
     </string-array>
     <string-array name="widget41_show_entries">
