--- a/res/values-pl/arrays.xml
+++ b/res/values-pl/arrays.xml
@@ -287,6 +287,7 @@
         <item>Wilgotność</item>
         <item>Ciśnienie</item>
         <item>Widoczność</item>
+        <item >Sunrise and sunset</item>
         <item>Następny alarm</item>
     </string-array>
     <string-array name="widget41_show_entries">
