--- a/res/values-sk/arrays.xml
+++ b/res/values-sk/arrays.xml
@@ -38,6 +38,7 @@
         <item>Vlhkosť</item>
         <item>Tlak</item>
         <item>Viditeľnosť</item>
+        <item >Sunrise and sunset</item>
         <item>Ďalšie upozornenia</item>
     </string-array>
     <string-array name="widget41_show_entries">
