--- a/res/values-da/arrays.xml
+++ b/res/values-da/arrays.xml
@@ -528,7 +528,7 @@
         <item>Fugtighed</item>
         <item>Tryk</item>
         <item>Sigtbarhed</item>
-        <item >Sunrise and sunset</item>
+        <item >Solopgang og solnedgang</item>
         <item>Næste Alarm</item>
     </string-array>
     <string-array name="widget41_show_entries">
