--- a/res/values-el/arrays.xml
+++ b/res/values-el/arrays.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string-array name="donations_google_android_market_promt_array">
-  		<item>1 Euro</item> 
-  		<item>2 Euros</item> 
-  		<item>3 Euros</item> 
-  		<item>5 Euros</item> 
-  		<item>8 Euros</item> 
-  		<item>13 Euros</item> 
+  		<item>1 Ευρώ</item> 
+  		<item>2 Ευρώ</item> 
+  		<item>3 Ευρώ</item> 
+  		<item>5 Ευρώ</item> 
+  		<item>8 Ευρώ</item> 
+  		<item>13 Ευρώ</item> 
   	</string-array>    
     <string-array name="update_interval_names">
         <item>30 λεπτά</item> 
@@ -361,7 +361,7 @@
         <item>Guinea</item>
         <item>Guadeloupe</item>
         <item>Equatorial Guinea</item>
-        <item>Greece</item>
+        <item>Ελλάδα</item>
         <item>S. Georgia and S. Sandwich Islands</item>
         <item>Guatemala</item>
         <item>Guam</item>
