--- a/res/values-es-rES/arrays.xml
+++ b/res/values-es-rES/arrays.xml
@@ -304,4 +304,8 @@
         <!--item >MITU</item-->
         <item>Estilo MIUI</item>
     </string-array>
+        <string-array name="weather_provider_entries">
+        <item>Foreca</item>
+        <item>Wunderground</item>
+    </string-array>
 </resources>
