--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -644,12 +644,14 @@
         <item>date_format_mdy</item>
         <item>date_format_dmy</item>
     </string-array>   
-        <string-array name="weather_provider_entries">
+    <string-array name="weather_provider_entries">
         <item>Foreca</item>
-        <item>Wunderground</item>
+        <item>Weather Underground</item>
+        <item>Accuweather</item>
     </string-array>
     <string-array name="weather_provider_values" translatable="false">
         <item>foreca</item>
         <item>wunderground</item>
+        <item>accuweather</item>
     </string-array>           
 </resources>
