--- a/res/values-es-rES/arrays.xml
+++ b/res/values-es-rES/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string-array name="donations_google_android_market_promt_array">
         <item>1 Euro</item>
         <item>2 Euros</item>
@@ -303,9 +303,5 @@
         <item>Por defecto</item>
         <!--item >MITU</item-->
         <item>Estilo MIUI</item>
-    </string-array>
-        <string-array name="weather_provider_entries">
-        <item>Foreca</item>
-        <item>Wunderground</item>
     </string-array>
 </resources>
